2022-07-11  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/ctf.pk (ctf_get_dict): Raise an assert instead of
	E_inval.

2022-07-10  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/ctf-frame.pk: Fix indentation and replace tabs with
	whitespaces.
	* pickles/ctf-frame-dump.pk: Likewise.

2022-07-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_op_excond): Invert the logic of excond
	operator.
	* doc/poke.texi (exception predicate): Update to new semantics.
	* libpoke/std.pk (with_temp_ios): Likewise.
	libpoke/std.pk (with_cur_ios): Likewise.
	* pickles/asn1-ber.pk (BER_Data_Value.isdefinite): Likewise.
	* pickles/btf-dump.pk (btf_dump_type_vdata): Likewise.
	* pickles/ctf-dump.pk (ctf_dump_func): Likewise.
	* pickles/diff.pk (diff_structured): Likewise.
	* testsuite/poke.pkl/excond-1.pk: Likewise.
	* testsuite/poke.pkl/excond-2.pk: Likewise.
	* testsuite/poke.pkl/excond-3.pk: Likewise.
	* testsuite/poke.pkl/excond-4.pk: Likewise.
	* testsuite/poke.std/std-test.pk: Likewise.

2022-07-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/btf.pk (BTF_Int): Turn `encoding' into a nested integral
	struct.
	* pickles/btf-dump.pk (btf_dump_int): Update accordingly.

2022-07-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* pickles/btf-dump.pk (btf_dump_var): Use btf_var_linkage_names.
	(btf_dump_func): New function.
	(btf_dump_type_vdata): Call btf_dump_func whenever appropriate.
	* pickles/btf.pk (BTF_VAR_STATIC): Define.
	(BTF_VAR_GLOBAL_ALLOCATED): Likewise.
	(BTF_VAR_GLOBAL_EXTERN): Likewise.
	(BTF_FUNC_STATIC): Likewise.
	(BTF_FUNC_GLOBAL): Likewise.
	(BTF_FUNC_EXTERN): Likewise.
	(btf_var_linkage_names): Likewise.
	(btf_func_linkage_names): Likewise.
	(BTF_Type.info._print): Print linkage whenever appropriate.
	(BTF_Variable): Add pretty-printer.

2022-04-10  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/search.pk: New file.
	* pickles/Makefile.am (dist_pickles_DATA): Add search.pk.
